--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "latex2sympy2_extended_cloned"]
-	path = latex2sympy2_extended_cloned
-	url = git@github.com:huggingface/latex2sympy2_extended.git
+    path = latex2sympy2_extended_cloned
+    url = https://github.com/huggingface/latex2sympy2_extended.git
